# greybox-analyzer

./: .gitignore  CMakeLists.txt  KernelFuzzCC  main.cpp  run.sh
testprog/: Makefile  Makefile-without-cfg  afl-test.sh  greeting.c  prog.c  run.sh
